# DataStructures

./: CMakeLists.txt  library.h
Lists/: Dynamic Array.c  Dynamic Array.h
lists/: dynamic_array.c  dynamic_array.h  singly_linked_list.c  singly_linked_list.h
